# ridinCLIgun

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  pyproject.toml  shortcut_spec_ridinCLIgun_macos.md  specification_ridinCLIgun_v0.2.md
.github/workflows/: ci.yml
data/: build_tldr_catalog.py  command_catalog.json  prompt_templates.toml  tldr_catalog_de.json  tldr_catalog_fr.json
data/locales/de/: catalog.toml  ui.toml
data/locales/en/: catalog.toml  ui.toml
data/locales/fr/: catalog.toml  ui.toml
docs/: command_analysis.md  decision_matrix.md  decisions.md  prompt_category_system.md  roadmap.md  security.md
src/ridincligun/: __init__.py  __main__.py  app.py  config.py  history.py  i18n.py  state.py
src/ridincligun/advisory/: __init__.py  catalog.py  engine.py  models.py  secret_detector.py  tldr_store.py  typo_detector.py
src/ridincligun/provider/: __init__.py  anthropic.py  base.py  deep_analysis.py  manager.py  mistral.py  openai.py  prompt.py
src/ridincligun/shell/: __init__.py  input_parser.py  pty_process.py
src/ridincligun/shortcuts/: __init__.py  bindings.py
src/ridincligun/tests/: __init__.py
src/ridincligun/ui/: __init__.py  advisory_pane.py  divider.py  history_screen.py  settings_screen.py  shell_pane.py  status_bar.py
tests/: conftest.py  test_advisory_engine.py  test_app_integration.py  test_catalog.py  test_config.py  test_deep_analysis.py  test_engine.py  test_history.py  test_history_browser.py  test_i18n.py  test_i18n_completeness.py  test_input_parser.py  test_mistral.py  test_provider.py  test_secret_detector.py  test_secret_mode.py  test_settings.py  test_shortcuts.py  test_suggestion_extract.py  test_tldr_store.py  test_typo_detector.py
