[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ridincligun"
version = "0.2.0"
description = "A terminal companion that advises but never acts"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "H. Berger" },
]
keywords = ["terminal", "shell", "safety", "advisory", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "pyte>=0.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
all = ["ridincligun[anthropic,openai,dev]"]

[project.scripts]
ridincligun = "ridincligun.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ridincligun"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
