[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ridincligun"
version = "0.4.0"
description = "A terminal companion that advises but never acts"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "H. Berger" },
]
keywords = ["terminal", "shell", "safety", "advisory", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "pyte>=0.8",
    "pyperclip>=1.9",
    "python-dotenv>=1.0",
    "pygments>=2.20",  # CVE-2026-4539 (ReDoS) fixed in 2.20; transitive via rich/textual
]

[project.optional-dependencies]
mistral = ["mistralai>=2.0"]
anthropic = ["anthropic>=0.87"]  # CVE-2026-34450, CVE-2026-34452 fixed in 0.87
openai = ["openai>=1.0"]
dev = [
    "pytest>=9.0.3",  # CVE-2025-71176 fixed in 9.0.3
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
all = ["ridincligun[mistral,anthropic,openai,dev]"]

[project.scripts]
ridincligun = "ridincligun.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ridincligun"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "ridincligun/data"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.bandit]
# This is a terminal/shell TUI app — subprocess usage is core functionality.
skips = ["B404", "B603", "B604", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
